<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingStart="@dimen/game_dialog_padding">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="16dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/relativelayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/gifImageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/game_dialog_banner"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/branding" />

            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativelayout1">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/game_dialog_padding">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="@dimen/game_dialog_padding"
                        android:paddingRight="@dimen/game_dialog_padding"
                        android:text="@string/dlg_play_again_text"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/game_dialog_header"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:paddingLeft="@dimen/game_dialog_padding"
                        android:paddingRight="@dimen/game_dialog_padding"
                        android:text="@string/dl_check_best_text"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/game_dialog_msg" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/message"
                        android:layout_marginTop="@dimen/game_dialog_margin"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <Button
                            android:id="@+id/negativeBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:background="@drawable/btn_sub_action"
                            android:text="@string/btn_negative_text"
                            android:textColor="@color/colorPrimaryText"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/positiveBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/game_dialog_padding"
                            android:layout_weight="50"
                            android:background="@drawable/btn_main_action"
                            android:text="@string/btn_positive_text"
                            android:textColor="@color/colorPrimaryText"
                            android:textStyle="bold" />
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>